# ihmc-matrix-library

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
NativeCommonOps/: CMakeCache.txt  CMakeLists.txt  Makefile  NativeCommonOps.cpp  NativeKalmanFilter.cpp  NativeKalmanFilter.h  NativeMatrix.cpp  NativeMatrix.cpp.autosave  NativeMatrix.h  NativeMatrix.i  NativeNullspaceProjector.cpp  NativeNullspaceProjector.h  NativeSparseMatrix.cpp  NativeSparseMatrix.h  NullspaceProjector.cpp  NullspaceProjector.h  README.md  cmake_install.cmake  us_ihmc_matrixlib_NativeCommonOpsWrapper.h
src/main/java/us/ihmc/matrixlib/: DiagonalMatrixTools.java  MatrixTools.java  NativeCommonOps.java  NativeCommonOpsWrapper.java  NativeKalmanFilter.java  NativeMatrix.java  NativeMatrixTools.java  NativeNullspaceProjector.java  NativeSparseMatrix.java  NullspaceProjector.java
src/main/java/us/ihmc/matrixlib/jni/: NativeKalmanFilterImpl.java  NativeMatrix.java  NativeMatrixImpl.java  NativeMatrixJAVA_wrap.cxx  NativeMatrixLibrary.java  NativeMatrixLibraryJNI.java  NativeNullspaceProjectorImpl.java  NativeSparseMatrix.cpp  NativeSparseMatrixImpl.java  NullspaceProjectorImpl.java  SWIGTYPE_p_EIGEN_MAKE_ALIGNED_OPERATOR_NEW.java  SWIGTYPE_p_double.java  SWIGTYPE_p_int.java
src/main/resources/: libNativeCommonOps.dylib
src/test/java/us/ihmc/matrixlib/: DiagonalMatrixToolsTest.java  MatrixTestTools.java  MatrixTestToolsTest.java  MatrixToolsTest.java  NativeCommonOpsTest.java  NativeKalmanFilterTest.java  NativeMatrixTest.java  NativeNullspaceProjectorTest.java  NativeSparseMatrixTest.java  NullspaceProjectorTest.java
